handyman.raven/src/main/java/in/handyman/raven/compiler/RavenParser.java
// Generated from Raven.g4 by ANTLR 4.9.2

package in.handyman.raven.compiler;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RavenParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
            T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
            T__52 = 53, T__53 = 54, NON_ZERO_DIGIT = 55, STRING = 56, CRLF = 57, Operator = 58,
            WS = 59, COMMENT = 60, LINE_COMMENT = 61, NUMBER = 62;
    public static final int
            RULE_process = 0, RULE_tryClause = 1, RULE_finallyClause = 2, RULE_catchClause = 3,
            RULE_action = 4, RULE_multitude = 5, RULE_copyData = 6, RULE_transform = 7,
            RULE_loadCsv = 8, RULE_abort = 9, RULE_callProcess = 10, RULE_forkProcess = 11,
            RULE_spawnProcess = 12, RULE_dogLeg = 13, RULE_startProcess = 14, RULE_assign = 15,
            RULE_dropFile = 16, RULE_restApi = 17, RULE_restPart = 18, RULE_expression = 19,
            RULE_json = 20, RULE_obj = 21, RULE_pair = 22, RULE_arr = 23, RULE_jValue = 24;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public RavenParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "process", "tryClause", "finallyClause", "catchClause", "action", "multitude",
                "copyData", "transform", "loadCsv", "abort", "callProcess", "forkProcess",
                "spawnProcess", "dogLeg", "startProcess", "assign", "dropFile", "restApi",
                "restPart", "expression", "json", "obj", "pair", "arr", "jValue"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'process'", "'{'", "'}'", "'try'", "'finally'", "'catch'", "'multitude'",
                "'as'", "'on'", "'using'", "'on-condition'", "'fielding'", "'copydata'",
                "'from'", "'to'", "'with-fetch-batch-size'", "'with-write-batch-size'",
                "'transform'", "'loadcsv'", "'pid'", "'with'", "'by-batch'", "'abort'",
                "'callprocess'", "'with-target'", "'from-file'", "'for-every'", "'forkprocess'",
                "'watermark'", "'spawn'", "'dogleg'", "'use-parent-context'", "'start-process'",
                "'with-file'", "'assign'", "'source'", "'dropfile'", "'in-path'", "'restapi'",
                "'url'", "'method'", "'with headers'", "'with params'", "'with body type'",
                "'{ part'", "'type as'", "'if'", "','", "':'", "'['", "']'", "'true'",
                "'false'", "'null'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, "NON_ZERO_DIGIT", "STRING",
                "CRLF", "Operator", "WS", "COMMENT", "LINE_COMMENT", "NUMBER"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Raven.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProcessContext process() throws RecognitionException {
        ProcessContext _localctx = new ProcessContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_process);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                match(T__0);
                setState(51);
                ((ProcessContext) _localctx).name = match(STRING);
                setState(52);
                match(T__1);
                setState(53);
                ((ProcessContext) _localctx).tryBlock = tryClause();
                setState(54);
                ((ProcessContext) _localctx).catchBlock = catchClause();
                setState(55);
                ((ProcessContext) _localctx).finallyBlock = finallyClause();
                setState(56);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TryClauseContext tryClause() throws RecognitionException {
        TryClauseContext _localctx = new TryClauseContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_tryClause);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                match(T__3);
                setState(59);
                match(T__1);
                setState(63);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__12) | (1L << T__17) | (1L << T__18) | (1L << T__22) | (1L << T__23) | (1L << T__27) | (1L << T__29) | (1L << T__30) | (1L << T__34) | (1L << T__36) | (1L << T__38))) != 0)) {
                    {
                        {
                            setState(60);
                            ((TryClauseContext) _localctx).action = action();
                            ((TryClauseContext) _localctx).actions.add(((TryClauseContext) _localctx).action);
                        }
                    }
                    setState(65);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(66);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FinallyClauseContext finallyClause() throws RecognitionException {
        FinallyClauseContext _localctx = new FinallyClauseContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_finallyClause);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                match(T__4);
                setState(69);
                match(T__1);
                setState(73);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__12) | (1L << T__17) | (1L << T__18) | (1L << T__22) | (1L << T__23) | (1L << T__27) | (1L << T__29) | (1L << T__30) | (1L << T__34) | (1L << T__36) | (1L << T__38))) != 0)) {
                    {
                        {
                            setState(70);
                            ((FinallyClauseContext) _localctx).action = action();
                            ((FinallyClauseContext) _localctx).actions.add(((FinallyClauseContext) _localctx).action);
                        }
                    }
                    setState(75);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(76);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CatchClauseContext catchClause() throws RecognitionException {
        CatchClauseContext _localctx = new CatchClauseContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_catchClause);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(78);
                match(T__5);
                setState(79);
                match(T__1);
                setState(83);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__12) | (1L << T__17) | (1L << T__18) | (1L << T__22) | (1L << T__23) | (1L << T__27) | (1L << T__29) | (1L << T__30) | (1L << T__34) | (1L << T__36) | (1L << T__38))) != 0)) {
                    {
                        {
                            setState(80);
                            ((CatchClauseContext) _localctx).action = action();
                            ((CatchClauseContext) _localctx).actions.add(((CatchClauseContext) _localctx).action);
                        }
                    }
                    setState(85);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(86);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ActionContext action() throws RecognitionException {
        ActionContext _localctx = new ActionContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_action);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__22: {
                        setState(88);
                        abort();
                    }
                    break;
                    case T__34: {
                        setState(89);
                        assign();
                    }
                    break;
                    case T__23: {
                        setState(90);
                        callProcess();
                    }
                    break;
                    case T__27: {
                        setState(91);
                        forkProcess();
                    }
                    break;
                    case T__29: {
                        setState(92);
                        spawnProcess();
                    }
                    break;
                    case T__30: {
                        setState(93);
                        dogLeg();
                    }
                    break;
                    case T__12: {
                        setState(94);
                        copyData();
                    }
                    break;
                    case T__36: {
                        setState(95);
                        dropFile();
                    }
                    break;
                    case T__18: {
                        setState(96);
                        loadCsv();
                    }
                    break;
                    case T__38: {
                        setState(97);
                        restApi();
                    }
                    break;
                    case T__17: {
                        setState(98);
                        transform();
                    }
                    break;
                    case T__6: {
                        setState(99);
                        multitude();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MultitudeContext multitude() throws RecognitionException {
        MultitudeContext _localctx = new MultitudeContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_multitude);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                match(T__6);
                setState(103);
                match(T__7);
                setState(104);
                ((MultitudeContext) _localctx).name = match(STRING);
                setState(109);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__8) {
                    {
                        {
                            setState(105);
                            match(T__8);
                            setState(106);
                            ((MultitudeContext) _localctx).on = match(STRING);
                        }
                    }
                    setState(111);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(112);
                match(T__9);
                setState(113);
                match(T__1);
                setState(117);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__12) | (1L << T__17) | (1L << T__18) | (1L << T__22) | (1L << T__23) | (1L << T__27) | (1L << T__29) | (1L << T__30) | (1L << T__34) | (1L << T__36) | (1L << T__38))) != 0)) {
                    {
                        {
                            setState(114);
                            ((MultitudeContext) _localctx).action = action();
                            ((MultitudeContext) _localctx).actions.add(((MultitudeContext) _localctx).action);
                        }
                    }
                    setState(119);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(120);
                match(T__2);
                setState(125);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(121);
                            match(T__10);
                            setState(122);
                            ((MultitudeContext) _localctx).condition = expression();
                        }
                    }
                    setState(127);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(132);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__11) {
                    {
                        {
                            setState(128);
                            match(T__11);
                            setState(129);
                            ((MultitudeContext) _localctx).writeThreadCount = match(NON_ZERO_DIGIT);
                        }
                    }
                    setState(134);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CopyDataContext copyData() throws RecognitionException {
        CopyDataContext _localctx = new CopyDataContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_copyData);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(135);
                    match(T__12);
                    setState(136);
                    match(T__7);
                    setState(137);
                    ((CopyDataContext) _localctx).name = match(STRING);
                    setState(138);
                    match(T__13);
                    setState(139);
                    ((CopyDataContext) _localctx).source = match(STRING);
                    setState(140);
                    match(T__14);
                    setState(141);
                    ((CopyDataContext) _localctx).to = match(STRING);
                    setState(142);
                    match(T__9);
                    setState(143);
                    match(T__1);
                    setState(144);
                    ((CopyDataContext) _localctx).value = match(STRING);
                    setState(145);
                    match(T__2);
                    setState(150);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__10) {
                        {
                            {
                                setState(146);
                                match(T__10);
                                setState(147);
                                ((CopyDataContext) _localctx).condition = expression();
                            }
                        }
                        setState(152);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(157);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__11) {
                        {
                            {
                                setState(153);
                                match(T__11);
                                setState(154);
                                ((CopyDataContext) _localctx).writeThreadCount = match(NON_ZERO_DIGIT);
                            }
                        }
                        setState(159);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(164);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__15) {
                        {
                            {
                                setState(160);
                                match(T__15);
                                setState(161);
                                ((CopyDataContext) _localctx).fetchBatchSize = match(NON_ZERO_DIGIT);
                            }
                        }
                        setState(166);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(171);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__16) {
                        {
                            {
                                setState(167);
                                match(T__16);
                                setState(168);
                                ((CopyDataContext) _localctx).writeBatchSize = match(NON_ZERO_DIGIT);
                            }
                        }
                        setState(173);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TransformContext transform() throws RecognitionException {
        TransformContext _localctx = new TransformContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_transform);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(174);
                match(T__17);
                setState(175);
                match(T__7);
                setState(176);
                ((TransformContext) _localctx).name = match(STRING);
                setState(177);
                match(T__8);
                setState(178);
                ((TransformContext) _localctx).on = match(STRING);
                setState(179);
                match(T__9);
                setState(180);
                match(T__1);
                setState(181);
                ((TransformContext) _localctx).STRING = match(STRING);
                ((TransformContext) _localctx).value.add(((TransformContext) _localctx).STRING);
                setState(182);
                match(T__2);
                setState(187);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(183);
                            match(T__10);
                            setState(184);
                            ((TransformContext) _localctx).condition = expression();
                        }
                    }
                    setState(189);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LoadCsvContext loadCsv() throws RecognitionException {
        LoadCsvContext _localctx = new LoadCsvContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_loadCsv);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(190);
                match(T__18);
                setState(191);
                match(T__7);
                setState(192);
                ((LoadCsvContext) _localctx).name = match(STRING);
                setState(193);
                match(T__19);
                setState(194);
                ((LoadCsvContext) _localctx).pid = match(STRING);
                setState(195);
                match(T__13);
                setState(196);
                ((LoadCsvContext) _localctx).source = match(STRING);
                setState(197);
                match(T__14);
                setState(198);
                ((LoadCsvContext) _localctx).to = match(STRING);
                setState(199);
                match(T__20);
                setState(200);
                ((LoadCsvContext) _localctx).delim = match(STRING);
                setState(201);
                match(T__21);
                setState(202);
                ((LoadCsvContext) _localctx).limit = match(STRING);
                setState(203);
                match(T__9);
                setState(204);
                match(T__1);
                setState(205);
                ((LoadCsvContext) _localctx).value = match(STRING);
                setState(206);
                match(T__2);
                setState(211);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(207);
                            match(T__10);
                            setState(208);
                            ((LoadCsvContext) _localctx).condition = expression();
                        }
                    }
                    setState(213);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AbortContext abort() throws RecognitionException {
        AbortContext _localctx = new AbortContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_abort);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(214);
                match(T__22);
                setState(215);
                match(T__7);
                setState(216);
                ((AbortContext) _localctx).name = match(STRING);
                setState(217);
                match(T__1);
                setState(218);
                ((AbortContext) _localctx).value = match(STRING);
                setState(219);
                match(T__2);
                setState(224);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(220);
                            match(T__10);
                            setState(221);
                            ((AbortContext) _localctx).condition = expression();
                        }
                    }
                    setState(226);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CallProcessContext callProcess() throws RecognitionException {
        CallProcessContext _localctx = new CallProcessContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_callProcess);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(227);
                match(T__23);
                setState(228);
                match(T__7);
                setState(229);
                ((CallProcessContext) _localctx).name = match(STRING);
                setState(230);
                match(T__24);
                setState(231);
                ((CallProcessContext) _localctx).target = match(STRING);
                setState(232);
                match(T__25);
                setState(233);
                ((CallProcessContext) _localctx).source = match(STRING);
                setState(234);
                match(T__9);
                setState(235);
                ((CallProcessContext) _localctx).datasource = match(STRING);
                setState(236);
                match(T__26);
                setState(237);
                match(T__1);
                setState(238);
                ((CallProcessContext) _localctx).value = match(STRING);
                setState(239);
                match(T__2);
                setState(244);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(240);
                            match(T__10);
                            setState(241);
                            ((CallProcessContext) _localctx).condition = expression();
                        }
                    }
                    setState(246);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ForkProcessContext forkProcess() throws RecognitionException {
        ForkProcessContext _localctx = new ForkProcessContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_forkProcess);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(247);
                match(T__27);
                setState(248);
                match(T__7);
                setState(249);
                ((ForkProcessContext) _localctx).name = match(STRING);
                setState(250);
                match(T__24);
                setState(251);
                ((ForkProcessContext) _localctx).target = match(STRING);
                setState(252);
                match(T__25);
                setState(253);
                ((ForkProcessContext) _localctx).source = match(STRING);
                setState(254);
                match(T__9);
                setState(255);
                ((ForkProcessContext) _localctx).datasource = match(STRING);
                setState(256);
                match(T__26);
                setState(257);
                match(T__1);
                setState(258);
                ((ForkProcessContext) _localctx).value = match(STRING);
                setState(259);
                match(T__2);
                setState(264);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__28) {
                    {
                        {
                            setState(260);
                            match(T__28);
                            setState(261);
                            ((ForkProcessContext) _localctx).forkBatchSize = match(STRING);
                        }
                    }
                    setState(266);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(271);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(267);
                            match(T__10);
                            setState(268);
                            ((ForkProcessContext) _localctx).condition = expression();
                        }
                    }
                    setState(273);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SpawnProcessContext spawnProcess() throws RecognitionException {
        SpawnProcessContext _localctx = new SpawnProcessContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_spawnProcess);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(274);
                match(T__29);
                setState(275);
                match(T__7);
                setState(276);
                ((SpawnProcessContext) _localctx).name = match(STRING);
                setState(277);
                match(T__24);
                setState(278);
                ((SpawnProcessContext) _localctx).target = match(STRING);
                setState(279);
                match(T__25);
                setState(280);
                ((SpawnProcessContext) _localctx).source = match(STRING);
                setState(285);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(281);
                            match(T__10);
                            setState(282);
                            ((SpawnProcessContext) _localctx).condition = expression();
                        }
                    }
                    setState(287);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DogLegContext dogLeg() throws RecognitionException {
        DogLegContext _localctx = new DogLegContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_dogLeg);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(288);
                match(T__30);
                setState(289);
                match(T__7);
                setState(290);
                ((DogLegContext) _localctx).name = match(STRING);
                setState(291);
                match(T__31);
                setState(292);
                ((DogLegContext) _localctx).inheritContext = match(STRING);
                setState(293);
                match(T__9);
                setState(294);
                match(T__1);
                setState(295);
                ((DogLegContext) _localctx).startProcess = startProcess();
                ((DogLegContext) _localctx).processList.add(((DogLegContext) _localctx).startProcess);
                setState(296);
                match(T__2);
                setState(301);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(297);
                            match(T__10);
                            setState(298);
                            ((DogLegContext) _localctx).condition = expression();
                        }
                    }
                    setState(303);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StartProcessContext startProcess() throws RecognitionException {
        StartProcessContext _localctx = new StartProcessContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_startProcess);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(304);
                match(T__32);
                setState(305);
                ((StartProcessContext) _localctx).name = match(STRING);
                setState(306);
                match(T__33);
                setState(307);
                ((StartProcessContext) _localctx).target = match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
